--- a/todo-api/package.json
+++ b/todo-api/package.json
@@ -3,7 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "mocha **/*.test.js",
+    "test-watch": "nodemon --exec 'yarn test'"
+  },
+  "engines": {
+    "node": "8.11.2"
+  },
   "dependencies": {
-    "mongodb": "^3.0.10"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "mongodb": "^3.0.10",
+    "mongoose": "^5.1.3"
+  },
+  "devDependencies": {
+    "expect": "^23.1.0",
+    "mocha": "^5.2.0",
+    "supertest": "^3.1.0"
   }
 }
